[package]
name = "pallet-lotteries"
version = '2.0.1'
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.1", default-features = false }
sp-io = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }
sp-core = { version = "2.0.1", default-features = false }
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }
# third-party dependencies
serde = { version = "1.0.102", features = ["derive"] }

[dev-dependencies]
sp-core = { version = "2.0.1"}
sp-io = { version = "2.0.1"}

[features]
default = ["std"]
std = [
    "serde/std",
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-core/std",
]