[package]
name = "pallet-names"
version = "1.0.0"
authors = ["Autonomous Worlds Ltd"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.115", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
enumflags2 = { version = "0.6.2" }
sp-std = { version = "2.0.1", default-features = false}
sp-io = { version = "2.0.1", default-features = false}
sp-runtime = { version = "2.0.1", default-features = false}
frame-benchmarking = { version = "2.0.1", default-features = false, optional = true }
frame-support = { version = "2.0.1", default-features = false}
frame-system = { version = "2.0.1", default-features = false}

[dev-dependencies]
sp-core = { version = "2.0.1"}
pallet-balances = { version = "2.0.1"}

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'sp-io/std',
    'sp-runtime/std',
    'frame-system/std',
]

